Fix checkout overflowing background

--- a/src/scss/woocommerce/pages/_checkout.scss
+++ b/src/scss/woocommerce/pages/_checkout.scss
@@ -1,7 +1,7 @@
 .woocommerce-checkout {
 
   // contain order review background
-  #barba-wrapper {
+  .site-main {
     overflow: hidden;
   }
 
